# websocket-agent

./: CMakeLists.txt  README.md  main.cpp
doc/: README.md
src/: README.md
src/base/: noncopyable.h  singleton.h  slaveThread.cpp  slaveThread.h  thread.cpp  thread.h
src/protocol/: httpRequest.cpp  httpRequest.h
src/reactor/: acceptor.cpp  acceptor.h  channel.cpp  channel.h  epollPoller.cpp  epollPoller.h  reactor.cpp  reactor.h  reactorPool.cpp  reactorPool.h  server.cpp  server.h
test/: README.md
